# quadratic_sos

./: .gitignore  CHANGELOG.md  CITATION.cff  COMMIT_MESSAGE.md  LICENSE  MANIFEST.md  Makefile  README.md  SUBMISSION_CHECKLIST.md  TOMS_ARTIFACT.md  pyproject.toml  requirements.txt
data/: arithmetic_examples.tsv  benchmark_balancing.tsv  benchmark_bounded.tsv  benchmark_enumeration.tsv  benchmark_generic_baseline.tsv  benchmark_optimisation.tsv  benchmark_representability.tsv  optional_cas_baselines.tsv  run_all_checks_summary.txt  sos_D10_distribution.txt  sos_balancing_ablation.tsv  sos_cross_field.tsv  sos_validation_summary.tsv
notebooks/: paper_illustrations.ipynb
paper/: exact_diagonal_representability_real_quadratic.tex  integral_sos_real_quadratic.aux  integral_sos_real_quadratic.out  integral_sos_real_quadratic.tex  references.bib
scripts/: balancing_ablation.py  cross_field_distributions.py  make_submission_archive.py  optional_cas_baselines.py  real_quadratic_sos_table.py  reproduce_tables.py  run_all_checks.py  validation_sweep.py
src/quadratic_diagonal/: __init__.py  weighted_diagonal_exact.py
src/quadratic_sos/: __init__.py  enumeration.py  experiments.py  length.py  pythagoras.py  ring.py  tables.py
tests/: test_all.py
