[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratic-sos"
version = "0.1.0"
description = "Exact integral lengths of sums of squares in real quadratic rings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tomasz Kania", email = "tomasz.marcin.kania@gmail.com"},
]
keywords = ["number theory", "sums of squares", "quadratic fields", "Pythagoras number"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib"]

[project.urls]
Repository = "https://github.com/tomaszkania/quadratic_sos"

[tool.setuptools.packages.find]
where = ["src"]
