[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratic-diagonal"
version = "0.2.0"
description = "Exact diagonal representability over real quadratic rings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Tomasz Kania", email = "tomasz.marcin.kania@gmail.com"},
]
keywords = ["number theory", "quadratic forms", "real quadratic fields", "diagonal representability"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib", "nbconvert"]
test = ["pytest"]
repro = ["jupyter", "matplotlib", "pytest", "nbconvert"]

[project.urls]
Repository = "https://github.com/tomaszkania/quadratic_diagonal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
